# gst-libav

ext/: Makefile.am
ext/libav/: gstavdeinterlace.c
ext/libswscale/: Makefile.am  gstffmpegscale.c  test.sh
